assets/css/main.css
/* ... */
/*@media screen and (max-width: 768px) {*/
@media screen and (max-width: 992px) {

    /*

    #menu {
        width: 100%;
        height: 100vh;
        position: sticky;
        left: 0;
        z-index: 1000;
        height: 0;
        background-color: aliceblue;
    }
*/
    #menu {
        padding-top: 3rem !important;
        background: #fff;
        height: 100vh;
        width: inherit;
        z-index: 1000000;
        position: fixed;
    }

    /*
    #sidebarCollapse {
    z-index: 100000;
    position: fixed;
    left: 5%;

}
*/

    .custom-menu {
        visibility: visible;
    }

    .wrapper {
        width: 100%;
        /*        height: 100vh;*/
        position: fixed;
        left: 0;
        z-index: 1000;
    }





    .content {
        width: 100%;
    }
}

@media screen and (max-width: 768px) {

    /*

    #menu {
        width: 100%;
        height: 100vh;
        position: sticky;
        left: 0;
        z-index: 1000;
        height: 0;
        background-color: aliceblue;
    }
*/
    #menu {
        padding-top: 3rem !important;
        background: #fff;
        height: 100vh;
        width: inherit;
        z-index: 1000000;
        position: fixed;
    }


    .custom-menu {
        visibility: visible;
    }

    .wrapper {
        width: 100%;
        /*        height: 100vh;*/
        position: fixed;
        left: 0;
        z-index: 1000;
    }


}

@media screen and (max-width: 992px) and (orientation: portrait) {

    .panel.banner .content {
        -moz-flex-basis: auto;
        -webkit-flex-basis: auto;
        -ms-flex-basis: auto;
        flex-basis: auto;
    }

    .panel.banner .image {
        -moz-flex-basis: auto;
        -webkit-flex-basis: auto;
        -ms-flex-basis: auto;
        flex-basis: auto;
        height: 18rem;
    }

    .panel.banner.left {
        -moz-flex-direction: column;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }

    .panel.banner.right {
        -moz-flex-direction: column-reverse;
        -webkit-flex-direction: column-reverse;
        -ms-flex-direction: column-reverse;
        flex-direction: column-reverse;
    }

    .scroll {
        visibility: hidden;
    }

}

/* Panel (Spotlight) */

.panel.spotlight {
    -moz-align-items: stretch;
    -webkit-align-items: stretch;
    -ms-align-items: stretch;
    align-items: stretch;
    position: relative;
}

.panel.spotlight > * {
    z-index: 1;
}

.panel.spotlight .content {
    display: -moz-flex;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -moz-justify-content: center;
    -webkit-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
    padding: 3.5rem 3.5rem 2rem 3.5rem;
}

.panel.spotlight .image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
}

.panel.spotlight .image img {
    -moz-object-fit: cover;
    -webkit-object-fit: cover;
    -ms-object-fit: cover;
    object-fit: cover;
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.panel.spotlight.left {
    -moz-justify-content: -moz-flex-start;
    -webkit-justify-content: -webkit-flex-start;
    -ms-justify-content: -ms-flex-start;
    justify-content: flex-start;
}

.panel.spotlight.left .content {
    background-image: linear-gradient(-90deg, transparent 0%, rgba(0, 0, 0, 0.125) 30%, rgba(0, 0, 0, 0.175) 50%);
}

.panel.spotlight.right {
    -moz-justify-content: -moz-flex-end;
    -webkit-justify-content: -webkit-flex-end;
    -ms-justify-content: -ms-flex-end;
    justify-content: flex-end;
}

.panel.spotlight.right .content {
    background-image: linear-gradient(90deg, transparent 0%, rgba(0, 0, 0, 0.125) 30%, rgba(0, 0, 0, 0.175) 50%);
}

@media screen and (max-width: 992px) {

    .panel.spotlight .content {
        padding: 2.8875rem 1.75rem 1.3875rem 1.75rem;
        -moz-flex-direction: column !important;
        -webkit-flex-direction: column !important;
        -ms-flex-direction: column !important;
        flex-direction: column !important;
        background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.25) 70%, rgba(0, 0, 0, 0.175)) !important;
        min-height: 25rem;
    }

}

@media screen and (max-width: 480px) {

    .panel.spotlight .content {
        min-height: 30rem;
    }

}

/* Page Wrapper */

#page-wrapper {
    display: -moz-flex;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    -moz-align-items: center;
    -webkit-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -moz-justify-content: -moz-flex-start;
    -webkit-justify-content: -webkit-flex-start;
    -ms-justify-content: -ms-flex-start;
    justify-content: flex-start;
    -moz-flex-grow: 1;
    -webkit-flex-grow: 1;
    -ms-flex-grow: 1;
    flex-grow: 1;
    -moz-flex-shrink: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-shrink: 1;
    flex-shrink: 1;
    height: 100%;
    /*		padding: 5rem;*/
}

@media screen and (orientation: portrait) {

    #page-wrapper {
        /*
        padding-left: 2rem;
        padding-right: 2rem;
*/
    }

}

@media screen and (min-aspect-ratio: 16 / 7) {

    #page-wrapper {
        /*        padding: 6vh;*/
    }

}

@media screen and (min-aspect-ratio: 16 / 6) {

    #page-wrapper {
        padding: 0;
    }

}

@media screen and (max-width: 992px) {

    #page-wrapper {
        height: auto;
        /*        padding: 1rem;*/
    }

}

@media screen and (max-width: 480px) {

    #page-wrapper {
        padding: 0;
    }

}
/* ... */

